--- a/RegexCpp/RegexCpp.vcxproj.filters
+++ b/RegexCpp/RegexCpp.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Automata.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ConsoleColor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Parser.cpp">
